--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Club - Trang chủ</title>
+    
+</head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="Css/header.css">
+    <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/index.css">
-</head>
 <body>
     <!-- Header -->
     <div class="header">
         <div class="header-top py-1">
             <div class="container d-flex justify-content-end align-items-center">
-                <span class="me-3">Welcome, Guest</span>
+                <a href="profile.html" class="me-3 text-decoration-none">Guest</a>
                 <a href="#" class="me-2 text-decoration-none">Login</a>
                 <a href="#" class="text-decoration-none">Signup</a>
             </div>
@@ -35,13 +37,13 @@
                                     <a class="nav-link active" href="index.html">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#services">Dịch vụ</a>
+                                    <a class="nav-link" href="service.html">Dịch vụ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">Giới thiệu</a>
+                                    <a class="nav-link" href="introduce.html">Giới thiệu</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#contact">Liên hệ</a>
+                                    <a class="nav-link" href="contact.html">Liên hệ</a>
                                 </li>
                             </ul>
                         </nav>
@@ -73,7 +75,7 @@
         <div class="row g-4 mb-5">
             <div class="col-md-4">
                 <div class="card h-100 text-center">
-                    <img src="https://i.imgur.com/1Q9Z1Zm.png" class="card-img-top" alt="Tính giá craft">
+                    <img src="Pic/crafting.webp" class="card-img-top" alt="Tính giá craft">
                     <div class="card-body">
                         <h5 class="card-title">Tính giá craft lời/lỗ</h5>
                         <p class="card-text">Nhập nguyên liệu, chọn vật phẩm, hệ thống sẽ tự động tính toán chi phí, giá bán, lợi nhuận hoặc lỗ cho bạn.</p>
@@ -82,7 +84,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card h-100 text-center">
-                    <img src="https://i.imgur.com/7w6Qw8h.png" class="card-img-top" alt="Check loot log">
+                    <img src="Pic/log-t1.jpg" class="card-img-top" alt="Check loot log">
                     <div class="card-body">
                         <h5 class="card-title">Check loot log</h5>
                         <p class="card-text">Tải lên loot log từ Albion Online, xem thống kê, hiệu quả hoạt động, chia sẻ kết quả với bạn bè.</p>
@@ -91,7 +93,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card h-100 text-center">
-                    <img src="https://i.imgur.com/9Q0Qw8h.png" class="card-img-top" alt="Tư vấn & hỗ trợ">
+                    <img src="Pic/crafting.webp" class="card-img-top" alt="Tư vấn & hỗ trợ">
                     <div class="card-body">
                         <h5 class="card-title">Tư vấn & hỗ trợ</h5>
                         <p class="card-text">Đội ngũ Cat Club luôn sẵn sàng tư vấn, giải đáp mọi thắc mắc về Albion Online cho bạn.</p>
@@ -119,5 +121,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="Js/header.js"></script>
 </body>
 </html>
