--- a/introduce.html
+++ b/introduce.html
@@ -76,7 +76,7 @@
                                 </div>
                                 <div class="intro-hero-feature">
                                     <span class="intro-hero-icon" style="background:#b0bec5;"><i class="bi bi-award-fill"></i></span>
-                                    <span><b>Sứ mệnh:</b> Đưa game thủ Việt vươn xa.</span>
+                                    <span><b>Sứ mệnh:</b> Đưa game thủ vươn xa.</span>
                                 </div>
                             </div>
                             <div class="intro-hero-contact mb-4">
